Tag used to mark the lib code need to support the legacy code of TimeTracker and Security